# kwargscpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install_to_conda_env.sh  pyproject.toml
cmake/: kwargscppConfig.cmake.in
conda.recipe/: build.sh  meta.yaml
doc/: troubleshooting.md
include/kwargscpp/: kwargs.h  kwargs_imph.h
include/kwargscpp/nanobind/: binding.h
include/kwargscpp/pybind11/: binding.h
include/kwargspp/: kwargs.h  kwargs_imph.h
include/kwargspp/nanobind/: binding.h
include/kwargspp/pybind11/: binding.h
src_python/kwargscpp/: __init__.py
tests/: CMakeLists.txt
tests/basic/: CMakeLists.txt  main.cpp
tests/cmake_build/: CMakeLists.txt  test_cmake_build.sh
tests/cmake_build/caller/: CMakeLists.txt  caller.cpp
tests/link/: CMakeLists.txt  library_shared.cpp  library_static.cpp  main.cpp
tests/nanobind/: CMakeLists.txt  bind_nanobind.cpp  tests_nanobind.py
tests/pybind11/: CMakeLists.txt  bind_pybind11.cpp  tests_pybind11.py
