[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "scikit-build-core>=0.4.3",
  "ninja",
  "cmake>=3.15",
]
build-backend = "scikit_build_core.build"

[project]
name = "kwargscpp"
dynamic = ["version"]
description = "kwargscpp: a C++ 17 library for handling keyword arguments in kwargs manner to interoperate with Python"
readme = "README.md"
authors = [{ name = "Shuang Song", email = "sxsong1207@gmail.com" }]

dependencies = []
requires-python = ">=3"


[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "version"
regex = '(?P<major>\d+).(?P<minor>\d+).(?P<patch>\d+)'
result = '{major}.{minor}.{patch}'


[tool.scikit-build]
wheel.packages = ["src_python/kwargscpp"]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
cmake.args = []
